--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SSKYV</string>
+    <string name="app_name">Parcours Univ</string>
     <string name="send">SEND</string>
     <string name="enter_message">Enter message</string>
 </resources>
