--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Parcours Univ</string>
     <string name="send">SEND</string>
     <string name="enter_message">Enter message</string>
+    <string name="login">Login</string>
 </resources>
