--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="send">SEND</string>
     <string name="enter_message">Enter message</string>
     <string name="login">Login</string>
+    <string name="algo1">UE ALGORITHMIQUE 1</string>
+    <string name="algo1_ref">Référence: SPUF40</string>
+    <string name="algo_description">Le but du cours est d\'introduire l\'étudiant à l’algorithmique, en mettant l\'accent sur les stratégies de conception d\'un algorithme efficace.</string>
 </resources>
