Ajout du bouton d'enregistrement du parcours de l'étudiant. Double click pour quitter. Désactivation des tests de l'activité Semester car dépendants du serveur.

--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">Parcours Univ</string>
-    <string name="send">SEND</string>
-    <string name="enter_message">Enter message</string>
-    <string name="login">Login</string>
+    <string name="login">Se connecter</string>
+    <string name="validate">Enregistrer le parcours</string>
 </resources>
