--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="login_error_missing_password">Mot de passe non renseigné.</string>
     <string name="email">Email</string>
     <string name="password">Mot de passe</string>
+    <string name="title_teachingunit_detail">TeachingUnit_Detail</string>
+    <string name="title_teachingunit_list">TeachingUnits</string>
 </resources>
