--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="title_teachingunit_list">TeachingUnits</string>
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
+    <string name="search_title">Search Title</string>
+    <string name="action_search_title">Action Search Title</string>
 </resources>
