--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -63,4 +63,5 @@
     <string name="cancel">Annuler</string>
     <string name="default_career_name">Mon parcours</string>
     <string name="unexpected_error">Une erreur est survenue</string>
+    <string name="edit_career">Editer</string>
 </resources>
